--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-asset": "~8.4.6",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
@@ -47,7 +48,7 @@
     "readable-stream": "^3.6.0",
     "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
-    "expo-linear-gradient": "~11.0.3"
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
