--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "base-64": "1.0.0",
     "buffer": "6.0.3",
     "env": "^0.0.2",
+    "ethereum-blockies-base64": "^1.0.2",
     "event-emitter": "^0.3.5",
     "events": "^1.1.1",
     "https-browserify": "~0.0.0",
@@ -43,7 +44,6 @@
     "path-browserify": "0.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "~17.0.2",
-    "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-moralis": "0.2.7",
     "react-native": "~0.63.3",
