fix intl compatibility & use yarn

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -126,6 +126,12 @@
       {
         "extensions": [".ts", ".tsx"]
       }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   },
   "overrides": [
